# code-agent

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  __init__.py  cli.py  code_agent.py  code_rag.py  codebase_retrieval.py  main.py  model.py  pyproject.toml  queries_tools.jsonl  rag_flow.py  task_001.md  tool_agent.py
adapters/llm/: embedding.py  llm.py
adapters/workspace/: semantic_splitter.py  vector_store.py
adapters/workspace/tree_sitter/: language_loader.py  parser.py
agent/: session.py
agent/prompts/: __init__.py  dataset.md
agents/: __init__.py  code_rag.py
benchmarks/: code_agent_benchmark.py
benchmarks/dataset/: __init__.py  cli.py  dataset_builder.py  extractor.py  models.py  runner.py  snapshot_manager.py
benchmarks/examples/: embedding_models.json
benchmarks/logs/: spring_ai_embedding_models_transcript.txt
benchmarks/results/: embedding.json
cli/: code_agent_cli.py  rich_output.py
clients/: llm.py
config/: config.py  manager.py  prompt.py  rag_config.py
configs/: manager.py
core/: __init__.py  base.py  emission.py  prompt.py  tool_output_store.py
docs/: ARCHITECTURE.md  cli_code_agent_plan.md  code_agent_benchmark.md  dataset_synthesis_plan.md
integration/: repository.py  splitter.py
integrations/: __init__.py  codebase_indexer.py  index.py  repository.py  splitter.py  tool_execution.py  vector_store.py
integrations/tree_sitter/: __init__.py  parser.py
nodes/: tool_execution.py
retrieval/: codebase_indexer.py  index.py  splitter.py
runtime/: dataset_agent.py  tool_runner.py  tool_types.py
tests/: conftest.py  test_agent_session.py  test_bash_tool.py  test_basic.py  test_cli_output.py  test_code_agent_session.py  test_codebase_indexer.py  test_codebase_retrieval.py  test_codebase_search_tool.py  test_config.py  test_context_extraction.py  test_edit_tool.py  test_emission.py  test_glob_tool.py  test_grep_search_tool.py  test_list_dir_tool.py  test_ls_tool.py  test_multi_edit_tool.py  test_rag.py  test_read_tool.py  test_system_prompt.py  test_todo_write_tool.py  test_tool_agent_flow.py  test_tool_execution_node.py  test_tool_registry.py  test_write_tool.py  verify_indexing.py
tests/adapters/: test_semantic_splitter.py  test_tree_sitter_parser.py  test_vector_store.py
tests/benchmarks/: test_dataset_pipeline.py  test_dataset_runner_unit.py
tests/integrations/: test_tree_sitter_parser.py  test_vector_store.py
tests/runtime/: test_dataset_agent.py  test_flow_primitives.py
tests/tools/: test_dataset_log.py
tools/: base.py  base_node.py  bash.py  codebase_search.py  dataset_log.py  edit.py  glob.py  grep.py  grep_search.py  ls.py  multi_edit.py  rag_tool.py  read.py  registry.py  todo_write.py  write.py
ui/: emission.py  rich_output.py
