[project]
name = "code-agent"
version = "0.1.0"
description = "A code analysis agent with search and discovery tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "litellm>=1.76.3",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "rich>=14.1.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
    "tree-sitter>=0.25.1",
    "tree-sitter-languages>=1.10.2",
]

[project.optional-dependencies]
full = [
    "qdrant-client>=1.13.0",
    "langchain>=0.0.300",
    "tiktoken>=0.5.0"
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0"
]

#[project.scripts]
# No CLI entrypoints for now; use Python API via rag_flow.

[tool.uv]
dev-dependencies = ["pytest>=8.4.2", "pytest-cov>=5.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["clients", "integration"]
include = [
    "__init__.py",
    "main.py",
    "model.py",
    "rag_flow.py",
    "config/*.py",
    "tools/*.py",
]
exclude = [
    "tests/**",
    "docs/**",
    "storage/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "__init__.py",
    "main.py",
    "model.py",
    "rag_flow.py",
    "config/*.py",
    "tools/*.py",
    "clients/**",
    "integration/**",
]
exclude = [
    "tests/**",
    "docs/**",
    "storage/**",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
