[project]
name = "code-agent"
version = "0.1.0"
description = "A code analysis agent with search and discovery tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "litellm>=1.76.3",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "diskcache>=5.6.3",
    "grep-ast>=0.3.3",
    "rich>=14.1.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
    "tree-sitter>=0.25.1",
    "tree-sitter-python>=0.0.1",
    "tree-sitter-javascript>=0.0.1",
    "tree-sitter-typescript>=0.0.1",
    "tree-sitter-go>=0.0.1",
    "tree-sitter-java>=0.0.1",
    "tree-sitter-rust>=0.0.1",
    "tree-sitter-c>=0.0.1",
    "tree-sitter-cpp>=0.0.1",
    "tree-sitter-c-sharp>=0.0.1",
    "tree-sitter-php>=0.0.1",
    "tree-sitter-ruby>=0.0.1",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-kotlin>=0.0.1",
]

[project.optional-dependencies]
full = [
    "qdrant-client>=1.13.0",
    "langchain>=0.0.300",
    "tiktoken>=0.5.0"
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0"
]

#[project.scripts]
# No CLI entrypoints for now; use Python API via rag_flow.

[tool.uv]
dev-dependencies = ["pytest>=8.4.2", "pytest-cov>=5.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["core", "agents", "configs", "integrations", "clients", "tools"]
include = [
    "__init__.py",
    "main.py",
    "model.py",
    "rag_flow.py",
    "configs/*.py",
    "tools/*.py",
    "integrations/tree_sitter/*.py",
    "integrations/tree_sitter/queries/*.scm",
    "integrations/tree_sitter/queries/README.md",
]
exclude = [
    "tests/**",
    "docs/**",
    "storage/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "__init__.py",
    "main.py",
    "model.py",
    "rag_flow.py",
    "configs/*.py",
    "tools/*.py",
    "clients/**",
    "core/**",
    "agents/**",
    "configs/**",
    "integrations/**",
    "tools/**",
]
exclude = [
    "tests/**",
    "docs/**",
    "storage/**",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
